--- a/src/app/homeroom/homeroom-list.component.html
+++ b/src/app/homeroom/homeroom-list.component.html
@@ -1,9 +1,22 @@
-<h1>Homeroom Management</h1>
 
-<table class="table table-hover table-sm text-center">
+
+<!-- 🔍 Search Bar -->
+<div class="mb-3 d-flex justify-content-between">
+  <h1>Homeroom Management</h1>
+
+  <input
+    type="text"
+    class="form-control w-25"
+    placeholder="Search..."
+    [(ngModel)]="searchTerm"
+    (input)="onSearch()"
+  />
+</div>
+
+<table class="table table-hover table-sm text-center" *ngIf="!loading && filteredHomerooms.length > 0">
   <thead>
     <tr>
-      <th style="width: 5%;">#</th>
+      <!-- <th style="width: 5%;">#</th> -->
       <th style="width: 10%;">Grade Level</th>
       <th style="width: 15%;">Section</th>
       <th style="width: 20%;">Strand</th> 
@@ -13,24 +26,30 @@
   </thead>
 
   <tbody>
-    <tr *ngFor="let h of homerooms; let i = index">
-      <td>{{ h.id }}</td>
+    <tr *ngFor="let h of filteredHomerooms; let i = index">
+      <!-- <td>{{ h.id }}</td> -->
       <td>{{ h.grade_level }}</td>
       <td>{{ h.section }}</td>
-      <td>{{ h.strand}}</td>
+      <td>{{ h.strand }}</td>
       <td>{{ h.school_year }}</td>
-      <td>
-        <a [routerLink]="['./', h.id, 'FIRST SEMESTER']" routerLinkActive="active"  class="btn btn-sm btn-primary">Consolidated Sheet</a>
-        <a [routerLink]="['./locking-history', h.id]" routerLinkActive="active"  class="btn btn-sm btn-success ml-3">Locking History</a>
+      <td class="d-flex justify-content-center gap-2">
+        <a [routerLink]="['./', h.id, 'FIRST SEMESTER']" class="mx-2 btn btn-sm btn-primary">
+          Consolidated Sheet
+        </a>
+        <a [routerLink]="['./locking-history', h.id]" class="btn btn-sm btn-success">
+          Locking History
+        </a>
       </td>
     </tr>
   </tbody>
 </table>
 
+<!-- Spinner -->
 <div *ngIf="loading" class="d-flex justify-content-center align-items-center my-5" style="min-height: 150px;">
   <div class="spinner-border text-primary" role="status"></div>
 </div>
 
-<ng-template #noData>
-  <p>No homeroooms.</p>
-</ng-template>
+<!-- No Data -->
+<div *ngIf="!loading && (!filteredHomerooms || filteredHomerooms.length === 0)">
+  <h3 class="text-center">No homerooms found.</h3>
+</div>
