--- a/src/app/teacher/ECR/final-semester-grade-sheet.component.html
+++ b/src/app/teacher/ECR/final-semester-grade-sheet.component.html
@@ -1,17 +1,20 @@
-
 <div class="w-100 d-flex justify-content-end my-3">
-  <button class="btn btn-sml btn-primary" (click)="printGradeSheet()">Print Grade</button>
+  <button class="btn btn-sml btn-primary" (click)="printGradeSheet()">
+    Print Grade
+  </button>
 </div>
 
 <div id="print-header" class="mb-4" *ngIf="subject$ | async as subject">
-  <strong class="text-center">Grading Period: {{ subject.semester }} FINAL GRADE</strong>
+  <strong class="text-center"
+    >Grading Period: {{ subject.semester }} FINAL GRADE</strong
+  >
 </div>
 
 <table class="table table-bordered table-hover table-sm">
   <thead>
     <tr>
       <th style="width: 20%">Lastname</th>
-      <th style="width: 20%;">Firstname</th>
+      <th style="width: 20%">Firstname</th>
       <th style="width: 5%" class="text-center">First Quarter</th>
       <th style="width: 5%" class="text-center">Second Quarter</th>
       <th style="width: 5%" class="text-center">Final Grade</th>
@@ -21,24 +24,40 @@
   </thead>
   <tbody>
     <tr *ngIf="students?.length === 0">
-      <td colspan="8" class="text-center text-muted">No students enrolled yet boii.</td>
+      <td colspan="8" class="text-center text-muted">
+        No students enrolled yet
+        <div class="mt-3">
+          <button class="btn btn-primary btn-sm" (click)="goToStudentList()">
+            Add Students
+          </button>
+        </div>
+      </td>
     </tr>
-    <tr *ngFor="let student of students"> 
+
+    <tr *ngFor="let student of students">
       <td>{{ student.lastName }}</td>
       <td>{{ student.firstName }}</td>
       <td class="text-center">{{ student.firstQuarter }}</td>
-      <td class="text-center">{{  student.secondQuarter }}</td>
+      <td class="text-center">{{ student.secondQuarter }}</td>
       <td class="text-center">{{ student.average }}</td>
-      <td class="text-center font-weight-bold"  [ngClass]="{
-      'text-success': student.remarks === 'PASSED',
-      'text-danger': student.remarks === 'FAILED'
-    }">{{ student.remarks }}</td>
+      <td
+        class="text-center font-weight-bold"
+        [ngClass]="{
+          'text-success': student.remarks === 'PASSED',
+          'text-danger': student.remarks === 'FAILED'
+        }"
+      >
+        {{ student.remarks }}
+      </td>
       <td class="text-center">{{ student.description }}</td>
     </tr>
   </tbody>
 </table>
 
-<div *ngIf="loading" class="d-flex justify-content-center align-items-center my-5" style="min-height: 150px;">
+<div
+  *ngIf="loading"
+  class="d-flex justify-content-center align-items-center my-5"
+  style="min-height: 150px"
+>
   <div class="spinner-border text-primary" role="status"></div>
 </div>
-
