--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+// This file is for global styles
+// Global styles should be defined here
  
 body {
   overflow-x: hidden;
