--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -203,7 +203,7 @@
           routerLinkActive="active"
           class="nav-link text-primary fw-semibold sidebar-link"
         >
-          <i class="bi bi-bar-chart-line me-2 text-primary"></i> E-Grade
+          <i class="bi bi-bar-chart-line me-2 text-primary"></i> My Grades
         </a>
       </li>
 
