--- a/src/app/student/egrade.component.html
+++ b/src/app/student/egrade.component.html
@@ -1,5 +1,5 @@
 <div class="py-2 px-4">
-  <h1>E-Grade</h1>
+  <h1>My Grade</h1>
 
   <div class="form-group col-md-4">
     <label for="schoolTerm">School Term</label>
