--- a/src/app/teacher/subject-list.component.html
+++ b/src/app/teacher/subject-list.component.html
@@ -36,10 +36,10 @@
       <td>
         <div class="d-flex p-1">
           <a [routerLink]="['./', a.id]" class="btn btn-sm btn-primary mx-2"
-            >ECR</a
+            >Compute Grades</a
           >
           <a [routerLink]="['./students', a.id]" class="btn btn-sm btn-success"
-            >Data Sheet</a
+            >Assign Students</a
           >
         </div>
       </td>
