--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
           <div class="card-body text-center">
             <i class="bi bi-bar-chart-line fs-1 text-primary"></i>
             <h5 class="mt-3">My Grades</h5>
-            <p class="text-muted">View your electronic grade records.</p>
+            <p class="text-muted">View your grade records.</p>
             <a routerLink="/egrade" class="btn btn-outline-primary btn-sm">Go</a>
           </div>
         </div>
