--- a/src/app/teacher/student-list.component.html
+++ b/src/app/teacher/student-list.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="submitEnrollmentDecisions()" class="py-4">
-  <h3>Students partially enrolled in this subject</h3>
+  <h3>Select Students for this Subject</h3>
   <table class="table table-hover table-sm">
     <thead>
       <tr>
@@ -51,7 +51,7 @@
     </button>
 
     <a class="btn btn-success btn-sm" [routerLink]="['/teacher', id]"
-      >Go to ECR</a
+      >Proceed to Grading</a
     >
   </div>
 </form>
