--- a/src/app/teacher/ECR/final-semester-grade-sheet.component.html
+++ b/src/app/teacher/ECR/final-semester-grade-sheet.component.html
@@ -41,8 +41,8 @@
       <td
         class="text-center font-weight-bold"
         [ngClass]="{
-          'text-success': student.remarks === 'PASSED',
-          'text-danger': student.remarks === 'FAILED'
+          'text-success': student.remarks === 'Passed',
+          'text-danger': student.remarks === 'Failed'
         }"
       >
         {{ student.remarks }}
