--- a/src/app/teacher/subject-list.component.html
+++ b/src/app/teacher/subject-list.component.html
@@ -1,6 +1,6 @@
 <!-- 🔍 Search Bar -->
 <div class="mb-3 d-flex justify-content-between">
-  <h1>Subjects</h1>
+  <h3>My Subjects</h3>
   <input
     type="text"
     class="form-control w-25"
