--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container py-4">
-  <h1 class="mb-4">Hi {{ account.firstName }} {{ account.lastName }}!</h1>
+  <h3 class="mb-4">Hi {{ account.firstName }} {{ account.lastName }}!</h3>
 
   <div class="row g-4">
     <!-- Student Dashboard -->
@@ -22,7 +22,7 @@
         <div class="card shadow-sm border-0 h-100">
           <div class="card-body text-center">
             <i class="bi bi-journal-text fs-1 text-success"></i>
-            <h5 class="mt-3">Assigned Subjects</h5>
+            <h5 class="mt-3">My Subjects</h5>
             <p class="text-muted">Manage and grade your assigned classes.</p>
             <a routerLink="/teacher" class="btn btn-outline-success btn-sm">Go</a>
           </div>
@@ -41,8 +41,8 @@
       </div>
     </ng-container>
 
-    <!-- Registrar Dashboard -->
-    <ng-container *ngIf="account.role === 'Registrar'">
+    <!-- Principal Dashboard -->
+     <ng-container *ngIf="account.role === 'Principal'">
       <div class="col-md-4">
         <div class="card shadow-sm border-0 h-100">
           <div class="card-body text-center">
@@ -53,6 +53,11 @@
           </div>
         </div>
       </div>
+     </ng-container>
+
+    <!-- Registrar Dashboard -->
+    <ng-container *ngIf="account.role === 'Registrar'">
+      
 
       <div class="col-md-4">
         <div class="card shadow-sm border-0 h-100">
