--- a/src/app/homeroom/locking-history/subject-list.component.html
+++ b/src/app/homeroom/locking-history/subject-list.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="mb-3 d-flex justify-content-between">
-    <h2 class="mb-4 text-primary">Locked Subjects History</h2>
+    <h3 class="mb-4y">Locked Subjects History</h3>
 
       <input
         type="text"
