--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -135,7 +135,7 @@
         class="nav-item border-bottom"
       >
         <a
-          routerLink="/admin/accounts"
+          routerLink="/accounts"
           routerLinkActive="active"
           class="nav-link text-primary fw-semibold sidebar-link"
         >
