--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,7 +93,7 @@
             <i class="bi bi-people fs-1 text-danger"></i>
             <h5 class="mt-3">Accounts</h5>
             <p class="text-muted">Manage user accounts and permissions.</p>
-            <a routerLink="/admin/accounts" class="btn btn-outline-danger btn-sm">Go</a>
+            <a routerLink="/accounts" class="btn btn-outline-danger btn-sm">Go</a>
           </div>
         </div>
       </div>
