--- a/src/app/teacher/ECR/assessment-type.component.html
+++ b/src/app/teacher/ECR/assessment-type.component.html
@@ -142,7 +142,7 @@
   <div style="width: 20%" class="pb-3 px-3">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <fieldset [disabled]="isLockedOrPending">
-        <h4 class="mb-3">Add quiz</h4>
+        <h4 class="mb-3">Add Perfect Score</h4>
         <div class="mb-2 d-flex">
           <label class="form-label d-inline w-50">Perfect Score:</label>
           <input
